fixing hero spacing on mobile

--- a/src/Styling/Hero.css
+++ b/src/Styling/Hero.css
@@ -139,7 +139,7 @@
   }
 
   .exit-overlay{
-    height: 100dvh;
+    height: 100vh;
     width: 100%;
     background-color: rgb(43, 43, 43);
     z-index: 4;
@@ -269,7 +269,10 @@
       }
 
       .text-container{
-        gap: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         width: 90%;
         padding-inline: 0.75rem;
       }
